# project-bat

./: .markdownlint.yml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: labels.yml
.github/ISSUE_TEMPLATE/: config.yml  report_bug.yml  request_documentation.yml  request_enhancement.yml  request_feature.yml
.github/linters/: .flake8  .markdown-lint.yml  .pylintrc  .yaml-lint.yml  pyproject.toml
.github/workflows/: continuous_deployment.yml  continuous_integration.yml  label_update.yml
docs/: README.md  changelog.md
docs/design/: class_diagrams.md
tests/unit/: test_temp.py
