# File:         setup.cfg
# Description:  Sets up metadata for the python package

[metadata]
name = project_bat

description = Minecraft Blueprint Automation Tool
long_description = file: README.md
long_description_content_type = text/markdown

author = Kevin Green

version = 0.1.0
url = https://github.com/kgreen1200/project-bat

# Types of Classifiers: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
package_dir =
    =source
packages = find:
install_requires =

[options.package_data]
* = *.txt, *.md

[options.packages.find]
where = source
exclude =
    examples*
    tools*
    docs*
    package_name.tests*
